# distributed-training-runtime

./: .gitignore  Cargo.toml  train_data.jsonl
examples/: .env.example  README.md  binary_formats.py  checkpointing.py  distributed_pytorch.py  python_examples.py  quickstart.py
examples/advanced/: complete_pipeline.py  large_scale.py
examples/core/: 01_runtime_basics.py  02_dataset_iteration.py  03_record_formats.py  04_checkpointing.py  05_progress_errors.py  06_prefetching.py  run_all.py
examples/distributed/: README.md  multiprocess.py  pytorch_ddp.py
examples/s3/: s3_checkpoint_resume.py  s3_file_operations.py  s3_minio_example.py  s3_training_example.py
proto/: coordinator.proto
python/dtr/: __init__.py
rust/coordinator/: Cargo.toml  build.rs
rust/coordinator/src/: main.rs  service.rs  state.rs
rust/coordinator/src/proto/: dtr.coordinator.rs
rust/python-bindings/: Cargo.toml  pyproject.toml
rust/python-bindings/src/: dataset.rs  lib.rs  runtime.rs
rust/runtime-core/: Cargo.toml  build.rs
rust/runtime-core/src/: async_runtime.rs  config.rs  error.rs  lib.rs  runtime.rs
rust/runtime-core/src/checkpoint/: async_reader.rs  async_writer.rs  format.rs  format_v2.rs  mod.rs  reader.rs  writer.rs
rust/runtime-core/src/coordinator/: checkpoint.rs  client.rs  mod.rs  protocol.rs  shard_assignment.rs
rust/runtime-core/src/coordinator/proto/: dtr.coordinator.rs
rust/runtime-core/src/dataset/: iterator.rs  mod.rs  parallel.rs  prefetch.rs  sharding.rs  traits.rs
rust/runtime-core/src/storage/: async_local.rs  async_traits.rs  local.rs  mod.rs  retry.rs  s3.rs  traits.rs
