[workspace]
resolver = "2"
members = [
    "rust/runtime-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["jack"]

[workspace.dependencies]
# Error Handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bincode = "1.3"

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Hashing
twox-hash = "1.6"

# Memory mapping
memmap2 = "0.9"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Testing
tempfile = "3.10"