[workspace]
resolver = "2"
members = [
    "rust/runtime-core",
    "rust/python-bindings",
    "rust/coordinator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["jack"]

[workspace.dependencies]
# Error Handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
bincode = "1.3"

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# Hashing
twox-hash = "1.6"

# Memory mapping
memmap2 = "0.9"

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Testing
tempfile = "3.10"

# Async runtime and utilities
tokio = { version = "1.40", features = ["rt-multi-thread", "fs", "io-util", "sync", "macros"] }
futures = "0.3"
async-trait = "0.1"

# Object storage (S3, GCS, Azure)
object_store = { version = "0.11", features = ["aws"] }

# Async compression
async-compression = { version = "0.4", features = ["tokio", "lz4", "zstd"] }

# Concurrent data structures
crossbeam = "0.8"

# Byte handling
bytes = "1.7"

# gRPC and Protocol Buffers
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random ID generation
uuid = { version = "1.0", features = ["v4"] }