# rust/python-bindings/Cargo.toml

[package]
name = "dtr-python"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "_dtr_core"
crate-type = ["cdylib"]

[features]
default = ["runtime-core/local"]
s3 = ["runtime-core/s3"]
coordinator = ["runtime-core/coordinator"]
all-backends = ["runtime-core/all-backends"]

[dependencies]
runtime-core = { path = "../runtime-core", default-features = false }
pyo3.workspace = true
tokio = { workspace = true }
