[package]
name = "runtime-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "runtime_core"
crate-type = ["lib"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
memmap2 = { workspace = true }
bincode = { workspace = true }
lz4_flex = { workspace = true }
zstd = { workspace = true }
twox-hash = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
