[package]
name = "runtime-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "runtime_core"
crate-type = ["lib"]

[features]
default = ["local"]
local = []
s3 = ["dep:object_store"]
all-backends = ["local", "s3"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
memmap2 = { workspace = true }
bincode = { workspace = true }
lz4_flex = { workspace = true }
zstd = { workspace = true }
twox-hash = { workspace = true }

# Async runtime and utilities
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Object storage (optional, requires s3 feature)
object_store = { workspace = true, optional = true }

# Async compression
async-compression = { workspace = true }

# Concurrent data structures
crossbeam = { workspace = true }

# Byte handling
bytes = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
